--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </div>
       <div class="col-6 first-one">
         <img class="img-hero" src="/images/illustration-hero.svg">
+        <div class="blue-back ground"></div>
       </div>
     </div>
   </section>
@@ -66,7 +67,8 @@
       <!-- Full-width images with number and caption text -->
       <div class="row mySlides fade">
         <div class="col-6">
-          <img src="/images/illustration-features-tab-1.svg">
+          <img class="img-2" src="/images/illustration-features-tab-1.svg">
+          <div class="ground2"></div>
         </div>
         <div class="col-6 first">
           <h1> Bookmark in one click</h1>
@@ -77,7 +79,8 @@
 
       <div class="row mySlides fade">
         <div class="col-6">
-          <img src="/images/illustration-features-tab-2.svg">
+          <img class="img-3" src="/images/illustration-features-tab-2.svg">
+          <div class="ground2"></div>
         </div>
         <div class="col-6 first">
           <h1> Intelligent search</h1>
@@ -89,7 +92,8 @@
 
       <div class="row mySlides fade">
         <div class="col-6">
-          <img src="/images/illustration-features-tab-3.svg">
+          <img class="img-3" src="/images/illustration-features-tab-3.svg">
+          <div class="ground2"></div>
         </div>
         <div class="col-6 first">
           <h1>Share your bookmarks</h1>
